--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>فلسطين حرة</title>
-    <link rel="shortcut icon" href="/lego-title.png" type="image/png" />
+    <link rel="shortcut icon" href="lego-title.png" type="image/png" />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
