--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>اقطع علم القتلة</h1>
+    <h1>مزق علم القتلة</h1>
 
     <canvas id="c"></canvas>
     <button onclick="resetCanvas()"><span>عيد من جديد</span></button>
